2009-02-23  John W. Eaton  <jwe@octave.org>

	* input.cc (last_debugging_command): New static variable.
	(octave_gets): Set it here.  Don't insert repeated debugging
	commands in the history list.

2009-02-23  Jaroslav Hajek  <highegg@gmail.com>

	* DLD-FUNCTIONS/pinv.cc: Support diagonal and permutation matrices.

2008-02-21  David Bateman  <dbateman@free.fr>

	* OPERATORS/op-cs-scm.cc, OPERATORS/op-cs-sm.cc, OPERATORS/op-s-scm.cc,
	OPERATORS/op-s-sm.cc, OPERATORS/op-scm-cs.cc, OPERATORS/op-scm-s.cc,
	OPERATORS/op-sm-cs.cc, OPERATORS/op-sm-s.cc: Don't perform any 
	narrowing to full matrices.

2009-02-20  Jaroslav Hajek  <highegg@gmail.com>

	* ov-base-diag.h (octave_base_diag::sqrt): Remove.
	* ov-re-diag.cc (octave_diag_matrix::sqrt): New method.
	* ov-re-diag.h: Declare it.
	* ov-flt-re-diag.cc (octave_float_diag_matrix::sqrt): New method.
	* ov-flt-re-diag.h: Declare it.
	* ov-cx-diag.cc (octave_complex_diag_matrix::sqrt): New method.
	* ov-cx-diag.h: Declare it.
	* ov-flt-cx-diag.cc (octave_float_complex_diag_matrix::sqrt): New method.
	* ov-flt-cx-diag.h: Declare it.

2009-02-20  John W. Eaton  <jwe@octave.org>

	* dynamic-ld.cc (octave_dynamic_loader::do_load_mex): Clear and
	reload mex file if it is out of date.  Don't check path for file.

	* pt-bp.cc (tree_breakpoint::visit_octave_user_script,
	tree_breakpoint::visit_octave_user_function):
	Don't panic.  Call accept on command list if it exists.

2009-02-20  Jaroslav Hajek  <highegg@gmail.com>

	* ov-base-mat.cc (octave_base_matrix<MT>::do_index_op):
	Correctly compute all-scalar index.
	* ov-cell.cc (octave_cell::is_sorted, octave_cell::is_sorted_rows):
	New methods.
	(octave_cell::octave_cell (const Array<std::string>&)): New
	constructor.
	* ov-cell.h: Declare them.
	* ov-cell.cc (octave_cell::sort): Create result already with
	cellstr_cache.
	* strfns.cc (Fstrcmp): Use special code when dealing with
	cellstr arrays.

2009-02-20  John W. Eaton  <jwe@octave.org>
